--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,15 @@ section {
   justify-content: center;
   align-items: center;
   height: 500px;
+  width: 100vw;
   background-color: transparent;
   border: solid black 0.5px;
   margin-bottom: 20px;
+}
+
+div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
