--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -4,6 +4,7 @@
   justify-content: space-evenly;
   align-items: center;
   background-color: lightgrey;
+  width: 100%;
   height: 30px;
   padding: 1px;
 }
