--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,9 +1,6 @@
-.footer-element {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+.footer {
+  flex-shrink: 0; /* Prevent Chrome, Opera, and Safari from letting these 
+  items shrink to smaller than their content's default minimum size. */
   background-color: lightgrey;
-  height: 30px;
   padding: 1px;
 }
