--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100vh;
+}
+
 body {
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
 }
