--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,6 @@
   font-family: Arial, sans-serif;
 }
 
-body {
-  width: 100%;
-}
-
 div#root {
   height: 100%;
 }
@@ -30,7 +26,6 @@ section {
   padding-left: 15px;
   padding-right: 15px;
   background-color: transparent;
-  border: solid black 0.5px;
   margin-bottom: 20px;
 }
 
@@ -65,7 +60,9 @@ h3 {
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 45px;
+  font-weight: 700;
+  text-align: center;
 }
 
 h2 {
