--- a/src/components/toolBar/toolBar.css
+++ b/src/components/toolBar/toolBar.css
@@ -3,11 +3,10 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: black;
-  color: white;
+  background-color: transparent;
+  color: black;
   width: 100%;
   height: 50px;
-  padding: 1px 10px 1px 10px;
 }
 
 div.spacer {
