--- a/src/components/sideDrawer/sideDrawer.css
+++ b/src/components/sideDrawer/sideDrawer.css
@@ -4,10 +4,10 @@
   background: black;
   box-shadow: 3px 0 7px rgba(0, 0, 0, 0.5);
   top: 0;
-  right: 0;
+  left: 0;
   width: 200px;
   z-index: 200;
-  transform: translateX(100%);
+  transform: translateX(-100%);
   transition: transform 0.25s ease-out;
 }
 
