--- a/src/components/toolBar/drawerToggleButton/drawerToggleButton.css
+++ b/src/components/toolBar/drawerToggleButton/drawerToggleButton.css
@@ -9,7 +9,7 @@ button.toggle-button {
   cursor: pointer;
   padding: 0;
   min-width: 30px;
-  margin: 20px 20px 0 0;
+  margin: 20px 0 0 20px;
 }
 
 button.toggle-button:focus {
