--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,4 +1,7 @@
 .footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   flex-shrink: 0; /* Prevent Chrome, Opera, and Safari from letting these 
   items shrink to smaller than their content's default minimum size. */
   background-color: lightgrey;
