--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,29 @@ form {
 }
 
 textarea {
-  min-width: 250px;
+  min-width: 300px;
   text-align: left;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 0px 0 10px 0 rgba(0, 0, 0, 0.09);
+  margin: 10px 0 0 0;
+}
+
+textarea:hover {
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+label {
+  font-size: 20px;
+}
+
+select {
+  height: 50px;
+  width: 200px;
+  font-size: 20px;
+  border-style: none;
+  padding: 0 15px;
+  margin: 10px 0 0 0;
 }
 
 button {
