--- a/src/components/toolBar/toolBar.css
+++ b/src/components/toolBar/toolBar.css
@@ -1,9 +1,11 @@
 .top-bar {
+  position: fixed;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: transparent;
+  background-color: white;
+  box-shadow: 0px 0 10px 0 rgba(0, 0, 0, 0.09);
   color: black;
   width: 100%;
   height: 50px;
