--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -1,12 +1,7 @@
-.landing-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .app-name {
   font-size: 50px;
   font-weight: 700;
+  margin: 35px 0;
 }
 
 .tagline {
