--- a/src/components/toolBar/drawerToggleButton/drawerToggleButton.css
+++ b/src/components/toolBar/drawerToggleButton/drawerToggleButton.css
@@ -1,5 +1,5 @@
 button.toggle-button {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-around;
   width: 30px;
@@ -21,4 +21,10 @@ div.toggle-button__line {
   height: 4px;
   background-color: black;
   border-radius: 1px;
+}
+
+@media screen and (max-width: 698px) {
+  button.toggle-button {
+    display: flex;
+  }
 }
