--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -6,7 +6,7 @@
   border-radius: 5px;
   background-color: transparent;
   font-size: 25px;
-  margin: 20px 0 0 0;
+  margin: 20px 0;
   height: 75px;
   width: 200px;
   box-shadow: 0px 0 10px 0 rgba(0, 0, 0, 0.09);
