--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -1,10 +1,36 @@
+.header_landing-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 80vh;
+}
+
 .app-name {
   font-size: 50px;
-  font-weight: 700;
-  margin: 35px 0;
+  font-weight: 800;
+  margin: 10px 0;
 }
 
 .tagline {
   font-size: 20px;
   width: 315px;
+}
+
+.app-logo_landing-page {
+  max-height: 18vh;
+}
+
+.down-arrow_container_landing-page {
+  display: flex;
+  position: fixed;
+  bottom: 50px;
+  justify-content: center;
+  align-items: center;
+  height: 70px;
+  width: 100%;
+}
+
+.down-arrow_landing-page {
+  height: 70px;
+  width: 70px;
 }
