--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  line-height: 1.5;
 }
 html,
 body {
@@ -15,4 +16,9 @@ body {
 
 a {
   text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
 }
