--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 500px;
+  min-height: 80vh;
   padding: 0 20px;
   background-color: transparent;
   margin-bottom: 20px;
