--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 80vh;
+  height: 100vh;
+  margin: 0;
 }
 
 .app-name {
