--- a/src/components/toolBar/toolBar.css
+++ b/src/components/toolBar/toolBar.css
@@ -1,8 +1,9 @@
 .tool-bar {
   position: fixed;
+  top: 0;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   background-color: white;
   box-shadow: 0px 0 10px 0 rgba(0, 0, 0, 0.09);
@@ -13,6 +14,10 @@
 
 div.spacer {
   flex: 1;
+}
+
+div.nav-spacer {
+  width: 35px;
 }
 
 span.tool-bar__app-name {
@@ -28,7 +33,6 @@ span.tool-bar__app-name {
 .tool-bar__nav ul {
   display: flex;
   list-style: none;
-  padding: 0 10vw 0 0;
 }
 
 .tool-bar__nav a {
@@ -41,21 +45,26 @@ span.tool-bar__app-name {
 
 .tool-bar__nav li {
   text-decoration: underline;
-  padding: 0 0 0 20px;
+  padding: 0 10px;
+}
+
+.app-logo-toolbar_landing-page {
+  height: 45px;
+  margin: 0 10px;
 }
 
 @media screen and (min-width: 698px) {
   span.tool-bar__app-name {
-    margin: 0 0 0 10vw;
+    margin: 0 10px;
   }
   .tool-bar__nav {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-    flex: 1;
+    justify-content: flex-start;
+    padding: 0 10px;
   }
 
-  div.spacer {
-    display: none;
+  div.nav-spacer {
+    width: 155px;
   }
 }
