--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -6,6 +6,7 @@
   border-radius: 5px;
   background-color: transparent;
   font-size: 25px;
+  font-weight: bold;
   margin: 20px 0;
   height: 75px;
   width: 200px;
