--- a/src/components/safety/safety.css
+++ b/src/components/safety/safety.css
@@ -8,6 +8,7 @@ a.safety__link {
   border-radius: 5px;
   background-color: rgba(255, 0, 0, 0.2);
   font-size: 25px;
+  font-weight: bold;
   margin: 20px 0 0 0;
   height: 75px;
   width: 200px;
