Added styling to warning section and spacing to all sections

--- a/src/App.css
+++ b/src/App.css
@@ -121,3 +121,9 @@ h3 {
 .align-right {
   text-align: right;
 }
+
+.space-evenly {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
