--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-* {
-  text-align: center;
-  font-family: Arial, sans-serif;
-}
-
 div#root {
   height: 100%;
 }
@@ -77,23 +72,28 @@ button {
 h1,
 h2,
 h3 {
-  font-family: "Arial", sans-serif;
-  font-weight: 400;
+  font-family: "Manrope", sans-serif;
+  font-weight: bolder;
 }
 
 h1 {
-  font-weight: bold;
   font-size: 45px;
   text-align: center;
+  letter-spacing: 5px;
   margin: 30px 0;
 }
 
 h2 {
   font-size: 30px;
+  letter-spacing: 2px;
 }
 
 h3 {
   font-size: 26px;
+}
+
+p {
+  text-align: left;
 }
 
 .xtra-small-text {
@@ -126,4 +126,10 @@ h3 {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+}
+
+.space-together {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
