Started implementing dynamic background-color fade w/opacity

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,22 @@ div#root {
 div.content {
   flex: 1 0 auto; /* Prevent Chrome, Opera, and Safari from letting
   these items shrink to smaller than their content's default minimum size. */
+  /* position: relative;
+  z-index: 1; */
 }
+
+/* div.after-content {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #ffffff;
+  opacity: 0;
+  z-index: -1;
+  transition: opacity 250ms;
+} */
 
 header {
   margin-top: 50px;
