--- a/src/pages/share/shareAudio/shareAudio.css
+++ b/src/pages/share/shareAudio/shareAudio.css
@@ -1,5 +1,11 @@
-ol {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+.iframe-input {
+  width: 300px;
+  height: 50px;
+  font-size: 18px;
+}
+
+.audio-instructions > p {
+  line-height: 2.5;
+  text-align: center;
+  max-width: 600px;
 }
