--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -24,6 +24,11 @@
   max-height: 18vh;
 }
 
+.landing-page-icon {
+  height: 130px;
+  width: 130px;
+}
+
 .down-arrow_container_landing-page {
   display: flex;
   position: fixed;
@@ -40,6 +45,10 @@
 }
 
 .warning_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: #73020ba4;
   border-radius: 5px;
   padding: 15px;
