--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -6,7 +6,8 @@
 }
 
 .app-name {
-  font-size: 50px;
+  letter-spacing: -0.1em;
+  font-size: 70px;
   font-weight: 800;
   margin: 10px 0;
 }
@@ -49,9 +50,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #73020ba4;
+  background-color: #73020bc4;
   border-radius: 5px;
-  padding: 15px;
+  padding: 0 30px 30px 30px;
   max-width: 550px;
   box-shadow: 0 5px 10px 5px rgb(0, 0, 0);
 }
