--- a/src/components/toolBar/toolBar.css
+++ b/src/components/toolBar/toolBar.css
@@ -5,7 +5,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  background-color: white;
+  background-color: #fafafa;
   box-shadow: 0px 0 10px 0 rgba(0, 0, 0, 0.09);
   color: black;
   width: 100%;
