--- a/src/components/toolBar/toolBar.css
+++ b/src/components/toolBar/toolBar.css
@@ -17,7 +17,7 @@ div.spacer {
 }
 
 div.nav-spacer {
-  width: 35px;
+  width: 45px;
 }
 
 span.tool-bar__app-name {
@@ -35,27 +35,26 @@ span.tool-bar__app-name {
   list-style: none;
 }
 
-.tool-bar__nav a {
-  font-size: 20px;
-  font-weight: bold;
-  color: black;
-  text-decoration: none;
+.tool-bar a {
   cursor: pointer;
+  display: flex;
+  align-content: center;
 }
 
 .tool-bar__nav li {
-  padding: 0 10px;
+  padding: 0 5px;
 }
 
 .app-logo-toolbar_landing-page {
-  height: 45px;
-  margin: 0 10px;
+  height: 30px;
+  margin: 0;
 }
 
-@media screen and (min-width: 698px) {
+@media screen and (min-width: 700px) {
   span.tool-bar__app-name {
     margin: 0 10px;
   }
+
   .tool-bar__nav {
     display: flex;
     flex-direction: row;
@@ -64,6 +63,6 @@ span.tool-bar__app-name {
   }
 
   div.nav-spacer {
-    width: 155px;
+    width: 90px;
   }
 }
