--- a/src/components/navButtons/navButtons.css
+++ b/src/components/navButtons/navButtons.css
@@ -5,6 +5,15 @@
   margin-bottom: 20px;
 }
 
-.nav-button_text {
-  margin-top: -10px;
+.nav-button_dynamic-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.nav-button_icon {
+  width: 100px;
+  height: 100px;
 }
