--- a/src/components/breatheTimer/breatheTimer.css
+++ b/src/components/breatheTimer/breatheTimer.css
@@ -63,8 +63,12 @@
 .breathe-timer_exit-button {
   margin: 80vh auto 0 auto;
   color: rgb(0, 0, 0);
-  background-color: rgba(255, 255, 255, 0.085);
+  background-color: rgba(255, 255, 255, 0.342);
   z-index: 1;
+}
+
+.breathe-timer_exit-button:hover {
+  background-color: rgb(255, 255, 255);
 }
 
 .breathe-timer_fade-in {
